--- a/Bookish.Web/Bookish.Web.csproj
+++ b/Bookish.Web/Bookish.Web.csproj
@@ -268,6 +268,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Library.cshtml" />
+    <Content Include="Views\Home\BookDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
