--- a/Bookish.Web/Bookish.Web.csproj
+++ b/Bookish.Web/Bookish.Web.csproj
@@ -203,6 +203,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BookViewModel.cs" />
+    <Compile Include="Models\BorrowingViewModel.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -270,7 +271,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Library.cshtml" />
     <Content Include="Views\Home\BookDetails.cshtml" />
-    <Content Include="Views\Home\Success.cshtml" />
+    <Content Include="Views\Home\RentBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
